# docindexer-work

./: .gitignore  CLAUDE.md  README.md  config.json  fileiterator.md  instructiions.md  pyproject.toml  test_config.py  test_help.py  test_index.py  test_readme.py  test_structure.py  test_structure_run.py
cli-instructions/: cli_example.py  cli_interface_instructions.md  cli_schema.json  cli_schema_explained.md
coding_instructions/: 02-cli_interface_development_instructions.md  03-file_iterator_development_instructions.md  04-config_development_instructions.md
docindexer/: __init__.py  cli.py  cli_schema.json  config.py  config_command.py  file_iterator.py  index_command.py  indexer.py  list_command.py  schema_command.py  structure_command.py  validator.py
docindexer/structure/: filter.py  node_factory.py  organizer.py  planner.py
docs/: file_iterator_diagram.md
file_iterator_instructions/: file_iterator_development_instructions.md
structure_instructions/: structure_development_instructions.md
tests/: test_cli_integration.py  test_file_iterator.py  test_runner.py  test_scenarios.json  test_validator.py
