[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docindexer"
version = "0.1.0"
authors = [
  { name = "DocIndexer Author" },
]
description = "A command line tool for indexing documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0",
  "rich>=13.0.0",
]

[project.scripts]
docindexer = "docindexer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["docindexer"]